--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name = org.h2.Driver
 spring.datasource.url =  jdbc:h2:tcp://localhost/~/ELibrary
 spring.datasource.username = test
 spring.datasource.password = test
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = update
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
